<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tacoma.uw.erik.shoppingbuddy.LoginFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/titleView"
        android:textStyle="bold"
        android:textSize="60sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/login_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText" />

    <EditText
        android:hint="@string/password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="12"
        android:id="@+id/passwordText"
        android:layout_below="@+id/loginText"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_below="@+id/passwordText"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/login_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_button"
            android:id="@+id/guest_button"/>
    </LinearLayout>

    <TextView
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_label"
        android:id="@+id/textView"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
